--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">NetworkExample</string>
-    <string name="info">info</string>
+    <string name="info">Нет подходящих подключеных сетей</string>
 </resources>
